project/logs/20251008_101406.log
アプリ開始
Use Adapter: NVIDIA GeForce RTX 4060 Laptop GPU

D3D12CreateDevice OK (FeatureLevel: 12.2)
Complete Create Device
Complete Create Commands
Complete Create SwapChain
Complete Create HeapAndTargetView
Complete Create Fence
Complete Create D3D12Device!!!
Begin CompileShader, path:Object3D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object3D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object3D.PS.hlsl, profile:ps_6_0

Object3D.PS.hlsl:32:19: error: no member named 'enableLightig' in 'Material'
    if (gMaterial.enableLightig != 0)
        ~~~~~~~~~ ^

Compile Succeeded, path:Object3D.PS.hlsl, profile:ps_6_0

Begin CompileShader, path:Object2D.VS.hlsl, profile:vs_6_0

Compile Succeeded, path:Object2D.VS.hlsl, profile:vs_6_0

Begin CompileShader, path:Object2D.PS.hlsl, profile:ps_6_0

Compile Succeeded, path:Object2D.PS.hlsl, profile:ps_6_0

